<resources>
    <string name="app_name">SharcApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SleeveLiveModeButtonText">Live</string>
    <string name="SleeveStopButtonText">Stop</string>
    <string name="SleeveRecordModeButtonText">Record</string>
    <string name="RecordTextFieldText">Rec Time</string>
    <string name="SleeveStatusText">Sleeve Status</string>
    <string name="ArmStartButtonText">Start</string>
    <string name="ArmStopButtonText">Stop</string>
    <string name="ArmStatusText">Status</string>
    <string name="ArmControlsTitleText">Arm Controls</string>
    <string name="SleeveControlsTitleText">Sleeve Controls</string>
    <string name="CalibrateBicepButtonText">Calibrate Bicep</string>
    <string name="CalibrateButtonText">Calibrate</string>
    <string name="CalibrateButtonStatusText">Medium Text</string>
    <string name="ShoulderFlexAtSideText">0.0</string>
    <string name="ShoulderFlexOutText">0.0</string>
    <string name="BicepFlexMinText">0</string>
    <string name="ShoulderRotationFrontText">0.0</string>
    <string name="ShoulderRotationBackText">0.0</string>
    <string name="BicepFlexMaxText">0</string>
    <string name="live_button_text">Live</string>
    <string name="stop_button_text">Stop</string>
    <string name="record_button_text">Record</string>
    <string name="record_time_field_text">Record Time</string>
    <string name="debug_text">DEBUG TEXT</string>
    <string name="title_activity_temperature">TemperatureActivity</string>
    <string name="view_temp_button_text">View Temps</string>
    <string name="shoulder_rotation_temp_text">0.0</string>
    <string name="shoulder_flex_temp_text">0.0</string>
    <string name="bicep_flex_servo_temp_text">0.0</string>
    <string name="bicep_rotation_servo_temp_text">0.0</string>
    <string name="shoulder_rotation_circuit_temp_text">0.0</string>
    <string name="shoulder_flex_circuit_temp_text">0.0</string>
    <string name="bicep_flex_circuit_temp_text">0.0</string>
    <string name="bicep_rotation_circuit_temp_text">0.0</string>
    <string name="start_monitoring_button_text">Start Monitoring</string>
    <string name="reset_button_text">Reset</string>
    <string name="bicep_rotation_calibration_button_text">Calibrate Bicep Rot.</string>
    <string name="bicep_rotation_calibration_status_text">0.0</string>
    <string name="bicep_rotation_back_calibration_status_text">0.0</string>
    <string name="calibrate_yaw_button_text">Calibrate Yaw</string>
    <string name="calibrate_yaw_bicep_status_text">0.0</string>
    <string name="calibrate_yaw_wrist_status_text">0.0</string>
    <string name="thumb_finger_tip_adc_value">0</string>
    <string name="index_finger_tip_adc_value">0</string>
    <string name="middle_finger_tip_adc_value">0</string>
    <string name="pinky_finger_tip_adc_value">0</string>
    <string name="ring_finger_tip_adc_value">0</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="play_button_text">Play</string>
    <string name="stop_record_button_text">Start Recording</string>
    <string name="record_mode_button_text">Rec. Mode</string>
</resources>
