<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalibrateBicepButtonText"
        android:id="@+id/CalibrateBicepButton"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/BicepFlexMinText"
        android:id="@+id/BicepFlexMinStatusText"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/ShoulderFlexAtSideStatusText"
        android:layout_alignLeft="@+id/ShoulderFlexAtSideStatusText"
        android:layout_alignStart="@+id/ShoulderFlexAtSideStatusText"
        android:layout_alignTop="@+id/CalibrateBicepButton"
        android:width="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calibrate Shoulder Flex"
        android:id="@+id/CalibrateShoulderFlexButton"
        android:layout_below="@+id/CalibrateBicepButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/CalibrateBicepButton"
        android:layout_alignEnd="@+id/CalibrateBicepButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calibrate Shoulder Rot."
        android:id="@+id/CalibrateShoulderRotationButton"
        android:layout_below="@+id/CalibrateShoulderFlexButton"
        android:layout_toLeftOf="@+id/ShoulderFlexAtSideStatusText"
        android:layout_toStartOf="@+id/ShoulderFlexAtSideStatusText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ShoulderFlexAtSideText"
        android:id="@+id/ShoulderFlexAtSideStatusText"
        android:layout_above="@+id/CalibrateShoulderRotationButton"
        android:layout_toRightOf="@+id/CalibrateShoulderFlexButton"
        android:layout_toEndOf="@+id/CalibrateShoulderFlexButton"
        android:layout_alignTop="@+id/CalibrateShoulderFlexButton"
        android:gravity="center_vertical|center_horizontal"
        android:width="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ShoulderFlexOutText"
        android:id="@+id/ShoulderFlexOutStatusText"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/BicepFlexMinStatusText"
        android:layout_toRightOf="@+id/ShoulderFlexAtSideStatusText"
        android:layout_toEndOf="@+id/ShoulderFlexAtSideStatusText"
        android:layout_alignBottom="@+id/ShoulderFlexAtSideStatusText"
        android:width="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ShoulderRotationFrontText"
        android:id="@+id/ShoulderRotationFrontStatusText"
        android:layout_alignBottom="@+id/CalibrateShoulderRotationButton"
        android:layout_alignLeft="@+id/ShoulderFlexAtSideStatusText"
        android:layout_alignStart="@+id/ShoulderFlexAtSideStatusText"
        android:layout_below="@+id/ShoulderFlexAtSideStatusText"
        android:gravity="center_vertical|center_horizontal"
        android:width="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ShoulderRotationBackText"
        android:id="@+id/ShoulderRotationBackStatusText"
        android:layout_alignBottom="@+id/ShoulderRotationFrontStatusText"
        android:layout_toRightOf="@+id/ShoulderRotationFrontStatusText"
        android:layout_toEndOf="@+id/ShoulderRotationFrontStatusText"
        android:layout_below="@+id/ShoulderFlexAtSideStatusText"
        android:gravity="center_vertical|center_horizontal"
        android:width="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/BicepFlexMaxText"
        android:id="@+id/BicepFlexMaxStatusText"
        android:layout_alignBottom="@+id/BicepFlexMinStatusText"
        android:layout_toRightOf="@+id/BicepFlexMinStatusText"
        android:layout_toEndOf="@+id/BicepFlexMinStatusText"
        android:layout_alignTop="@+id/BicepFlexMinStatusText"
        android:width="75dp"
        android:gravity="center_vertical|center_horizontal" />

    <fragment
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:name="com.danjsher.sharcapp.StatusPictureFragment"
        android:id="@+id/fragment"
        tools:layout="@layout/bicep_flex_status_image_fragment"
        android:layout_alignBottom="@+id/ShoulderRotationBackStatusText"
        android:layout_toRightOf="@+id/ShoulderRotationBackStatusText" />

    <fragment
        tools:layout="@layout/bicep_flex_status_image_fragment"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:name="com.danjsher.sharcapp.StatusPictureFragment"
        android:id="@+id/fragment2"
        android:layout_above="@+id/ShoulderRotationBackStatusText"
        android:layout_toRightOf="@+id/ShoulderFlexOutStatusText"
        android:layout_toEndOf="@+id/ShoulderFlexOutStatusText" />

    <fragment
        tools:layout="@layout/bicep_flex_status_image_fragment"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:name="com.danjsher.sharcapp.StatusPictureFragment"
        android:id="@+id/fragment3"
        android:layout_above="@+id/ShoulderFlexOutStatusText"
        android:layout_toRightOf="@+id/ShoulderFlexOutStatusText"
        android:layout_toEndOf="@+id/ShoulderFlexOutStatusText" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/live_button_text"
        android:id="@+id/LiveButton"
        android:layout_alignTop="@+id/StopButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text"
        android:id="@+id/StopButton"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/RecordTimeField"
        android:layout_alignStart="@+id/RecordTimeField" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/RecordTimeField"
        android:layout_below="@+id/StopButton"
        android:layout_toRightOf="@+id/LiveButton"
        android:layout_toEndOf="@+id/LiveButton"
        android:text="@string/record_time_field_text"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/record_button_text"
        android:id="@+id/RecordButton"
        android:layout_alignTop="@+id/RecordTimeField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Main Controls"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Calibration"
        android:id="@+id/textView2"
        android:layout_below="@+id/RecordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/debug_text"
        android:id="@+id/debugText"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/CalibrateShoulderRotationButton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/debugText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Temps"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

</RelativeLayout>
